[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Estaciones/Estacion_Recarga/Estacion_Recarga.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estaciones/Estacion_Recarga/recarga.ogg" type="AudioStream" id=2]
[ext_resource path="res://Juego/Estaciones/Estacion_Recarga/vacio.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Estaciones/Estacion_Recarga/EstacionRecarga.gd" type="Script" id=5]
[ext_resource path="res://Juego/Estaciones/Estacion_Recarga/Porcentaje_Energia.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 88.0
height = 116.597

[sub_resource type="Animation" id=2]
resource_name = "activado"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 37, 37 ), Vector2( 35, 35 ), Vector2( 32, 32 ), Vector2( 35, 35 ), Vector2( 37, 37 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "carga"
tracks/0/type = "value"
tracks/0/path = NodePath("CargaSFX:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 1, 0.913725, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="EstacionRecarga" type="Node2D" groups=[
"minimapa",
]]
script = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
rotation = 6.28319
collision_layer = 0
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
z_index = 1
texture = ExtResource( 1 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 2 )
anims/carga = SubResource( 3 )
anims/default = SubResource( 4 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="BarraEnergia" type="ProgressBar" parent="."]
margin_left = -75.0
margin_top = -190.0
margin_right = 75.0
margin_bottom = -160.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
value = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaAtraccion" to="." method="_on_AreaAtraccion_body_entered"]
[connection signal="body_exited" from="AreaAtraccion" to="." method="_on_AreaAtraccion_body_exited"]

[editable path="AreaAtraccion"]
